{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 110,
  "lineage": "b361418d-9ada-94c8-1a54-27610abdcac0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0d8a097b9c0b9376c",
            "id": "rtb-0d8a097b9c0b9376c",
            "owner_id": "415372497941",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056dac82bf09f61f0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default table"
            },
            "vpc_id": "vpc-08abc236557aebfd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e80a462ede03e653",
            "arn": "arn:aws:ec2:eu-west-2:415372497941:instance/i-0a86e493437058ac2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a86e493437058ac2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "LAB-101-KP",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a6684174e5cad63e",
            "private_dns": "ip-10-200-201-183.eu-west-2.compute.internal",
            "private_ip": "10.200.201.183",
            "public_ip": "3.8.167.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09e3532f6bd24386f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc376266973dc5e0",
            "tags": {
              "Name": "LDN-WEB-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed36861d9eb77454"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:415372497941:internet-gateway/igw-056dac82bf09f61f0",
            "id": "igw-056dac82bf09f61f0",
            "owner_id": "415372497941",
            "tags": {
              "Name": "LDN-GW"
            },
            "vpc_id": "vpc-08abc236557aebfd3"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-table-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026c73a32291eb292",
            "route_table_id": "rtb-0d8a097b9c0b9376c",
            "subnet_id": "subnet-0fc376266973dc5e0"
          },
          "dependencies": [
            "aws_default_route_table.route",
            "aws_internet_gateway.Internet_Gateway",
            "aws_subnet.subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:415372497941:security-group/sg-0ed36861d9eb77454",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed36861d9eb77454",
            "ingress": [
              {
                "cidr_blocks": [
                  "84.71.241.121/32"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "84.71.241.121/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "415372497941",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-08abc236557aebfd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:415372497941:subnet/subnet-0fc376266973dc5e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.200.201.0/24",
            "id": "subnet-0fc376266973dc5e0",
            "map_public_ip_on_launch": true,
            "owner_id": "415372497941",
            "tags": {
              "Name": "LDN-Public"
            },
            "vpc_id": "vpc-08abc236557aebfd3"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:415372497941:vpc/vpc-08abc236557aebfd3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.200.0/22",
            "default_network_acl_id": "acl-0b0aec318119b788e",
            "default_route_table_id": "rtb-0d8a097b9c0b9376c",
            "default_security_group_id": "sg-0cea1cc0cab5d2d93",
            "dhcp_options_id": "dopt-35192f5d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08abc236557aebfd3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d8a097b9c0b9376c",
            "owner_id": "415372497941",
            "tags": {
              "Name": "LDN-VPC-01"
            }
          }
        }
      ]
    }
  ]
}